--- a/src/main/resources/TartarusCore/TxtConverter/messages_en.properties
+++ b/src/main/resources/TartarusCore/TxtConverter/messages_en.properties
@@ -10,6 +10,7 @@ ui.ignored=Ignored Folders (comma separated):
 ui.ignored_prompt=Example: Library, Temp, obj
 ui.rescan_btn=Rescan
 ui.structure_cb=Generate Structure File (%s)
+ui.compact_structure_cb=Compact Mode (Collapse ignored files)
 ui.merged_cb=Generate Merged File with All Code (%s)
 ui.select_files_btn=Select Files...
 ui.convert_btn=START CONVERSION
