--- a/src/main/resources/TartarusCore/TxtConverter/messages_en.properties
+++ b/src/main/resources/TartarusCore/TxtConverter/messages_en.properties
@@ -9,8 +9,9 @@ ui.extensions_prompt=Example: gd, tscn, java, xml
 ui.ignored=Ignored Folders (comma separated):
 ui.ignored_prompt=Example: Library, Temp, obj
 ui.rescan_btn=Rescan
-ui.structure_cb=Generate Structure File (%s)
+ui.structure_cb=Generate Structure File
 ui.compact_structure_cb=Compact Mode (Collapse ignored files)
+ui.token_compression_cb=Smart Token Compression (Remove visual noise)
 ui.merged_cb=Generate Merged File with All Code (%s)
 ui.select_files_btn=Select Files...
 ui.convert_btn=START CONVERSION
