--- a/src/main/resources/TartarusCore/TxtConverter/messages_en.properties
+++ b/src/main/resources/TartarusCore/TxtConverter/messages_en.properties
@@ -16,6 +16,10 @@ ui.merged_cb=Generate Merged File with All Code (%s)
 ui.select_files_btn=Select Files...
 ui.convert_btn=START CONVERSION
 ui.log_label=Execution Log:
+ui.compression_label=Token Compression:
+ui.comp_none=None (Original)
+ui.comp_smart=Smart (Safe)
+ui.comp_max=Maximum (No comments)
 
 # Status
 ui.status_ready=Ready
